# optimal-auction-multidim

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
approx/: __init__.py  approximation.py  constraints.py  discrete.py  oracle.py
approx/tests/: test_approximation.py  test_border.py  test_ic.py
auction/: __init__.py  approximation.py  constraints.py  discrete.py  examples.py  oracle.py  util.py
auction/tests/: test_approximation.py  test_border.py  test_ic.py
benchmarks/: benchmark.py
docs/: RESUME.md  baselines.json  benchmarks.md  extrapolation.md  math_reference.md
scripts/: Testing new code.ipynb  extract_baselines.py  ortools_test.py  output.txt  stress_t.py  test.pkl  test.py
src/optimal_auctions/: __init__.py  approximation.py  constraints.py  discrete.py  oracle.py  util.py
src/optimal_auctions/validation/: __init__.py  ebm.py
tests/: test_approximation.py  test_border.py  test_ic.py
tests/benchmarks/: test_baselines.py
tests/validation/: test_approximation_analytic.py  test_closed_forms.py  test_convergence.py  test_ebm.py
