[project]
name = "optimal-auction-multidim"
version = "0.2.0.dev0"
description = "Approximating optimal multi-dimensional auctions (Kushnir & Michelson 2022)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "James Michelson", email = "jamesgmichelson@gmail.com" },
    { name = "Alexey Kushnir" },
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    # highspy is the LP backend for the auction approximation.
    "highspy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/jmemich/optimal-auction-multidim"
Paper = "https://arxiv.org/abs/2207.01664"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/optimal_auctions"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["scripts/output.txt", "scripts/test.pkl", "scripts/*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "RUF", # ruff-specific
]
ignore = [
    "E741", # we follow Belloni's original notation (ambiguous variable names like l, I, O)
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # allow asserts in tests
"scripts/**/*.py" = ["E402"] # scripts may do path manipulation before imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = ["**/__pycache__", "**/.pytest_cache", "scripts/.ipynb_checkpoints"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "slow: tests that take more than a few seconds (deselect with '-m \"not slow\"')",
    "benchmark: regression benchmarks driven by docs/baselines.json",
]
